--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,22 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Ejercicio6",
+            "request": "launch",
+            "mainClass": "Ejercicios.Ejercicio6.Ejercicio6",
+            "projectName": "java_capitulo_11_588b24c4",
+            "args": "./Ejercicios/Ejercicio6/Palabras.txt hola"
+        },
+        {
+            "type": "java",
+            "name": "Launch Ejercicio4",
+            "request": "launch",
+            "mainClass": "Ejercicios.Ejercicio4.Ejercicio4",
+            "projectName": "java_capitulo_11_588b24c4",
+            "args": "./Ejercicios/Ejercicio4/Uno.txt ./Ejercicios/Ejercicio4/Dos.txt"
+        },
+        {
+            "type": "java",
             "name": "Launch Ejercicio3",
             "request": "launch",
             "mainClass": "Ejercicio3",
